media/error_tc/error_358_3.txt
G:\SEM-7\ADF\FINAL PROJECT\HOPE 2.0\algobooth-adf\media\temp_tle_codes\358_1.cpp: In function 'int main()':
G:\SEM-7\ADF\FINAL PROJECT\HOPE 2.0\algobooth-adf\media\temp_tle_codes\358_1.cpp:8:1: error: expected ';' before '}' token
 }
 ^
